--- a/.htaccess
+++ b/.htaccess
@@ -1,11 +1,24 @@
-Options +FollowSymlinks
-RewriteEngine On
+Options +FollowSymLinks -indexes
+<IfModule mod_rewrite.c>
+RewriteEngine on
+RewriteBase /
 
-RewriteCond %{HTTP_HOST} ^www\.(.+)$ [NC]
-RewriteCond %{HTTPS}s ^on(s)|
-RewriteRule ^ http%2://%1%{REQUEST_URI} [L,R=301]
+## If the request is for a valid directory
+RewriteCond %{REQUEST_FILENAME} -d [OR]
+## If the request is for a valid file
+RewriteCond %{REQUEST_FILENAME} -f [OR]
+## If the request is for a valid link
+RewriteCond %{REQUEST_FILENAME} -l
+## don't do anything
+RewriteRule ^ - [L]
 
-RewriteCond %{REQUEST_FILENAME} !-f
-RewriteCond %{REQUEST_FILENAME} !-d
 
-RewriteRule ^(.*)$ index.php?page=$1 [QSA,L]
+RewriteRule ^([^/]+)/([^/]+)/([^/]+)/([^/]+)/?$ index.php?x=$1&z=$2&y=$3&r=$4 [L,QSA]
+
+RewriteRule ^([^/]+)/([^/]+)/([^/]+)/?$ index.php?x=$1&z=$2&y=$3 [L,QSA]
+
+RewriteRule ^([^/]+)/([^/]+)/?$ index.php?x=$1&z=$2 [L,QSA]
+
+RewriteRule ^([^/]+)/?$ index.php?x=$1 [L,QSA]
+
+</IfModule>
